; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xmlrpc_introspection.c_xi_system_list_methods_cb.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xmlrpc_introspection.c_xi_system_list_methods_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 }

@xmlrpc_vector_array = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32, i8*)* @xi_system_list_methods_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xi_system_list_methods_cb(%struct.TYPE_6__* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %10 = load i32, i32* @xmlrpc_vector_array, align 4
  %11 = call i32 @XMLRPC_CreateVector(i32* null, i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = call i64 @Q_Iter_Head_F(i32* %13)
  store i64 %14, i64* %8, align 8
  br label %15

15:                                               ; preds = %29, %3
  %16 = load i64, i64* %8, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %32

18:                                               ; preds = %15
  %19 = load i64, i64* %8, align 8
  %20 = call %struct.TYPE_5__* @Q_Iter_Get_F(i64 %19)
  store %struct.TYPE_5__* %20, %struct.TYPE_5__** %9, align 8
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %22 = icmp ne %struct.TYPE_5__* %21, null
  br i1 %22, label %23, label %29

23:                                               ; preds = %18
  %24 = load i32, i32* %7, align 4
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @XMLRPC_VectorAppendString(i32 %24, i32 0, i32 %27, i32 0)
  br label %29

29:                                               ; preds = %23, %18
  %30 = load i64, i64* %8, align 8
  %31 = call i64 @Q_Iter_Next_F(i64 %30)
  store i64 %31, i64* %8, align 8
  br label %15

32:                                               ; preds = %15
  %33 = load i32, i32* %7, align 4
  ret i32 %33
}

declare dso_local i32 @XMLRPC_CreateVector(i32*, i32) #1

declare dso_local i64 @Q_Iter_Head_F(i32*) #1

declare dso_local %struct.TYPE_5__* @Q_Iter_Get_F(i64) #1

declare dso_local i32 @XMLRPC_VectorAppendString(i32, i32, i32, i32) #1

declare dso_local i64 @Q_Iter_Next_F(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
